--- a/Manuscript/PTMsMODa.tex
+++ b/Manuscript/PTMsMODa.tex
@@ -94,8 +94,9 @@ We have mass-spectrometry data at 9 different points of the OD600 curve (see Sup
 \subsection{Modified \emph{E. coli} proteome}
 First, we are interested in identifying the amount of proteome modified. Since we have data at each of the 9 time points i.e., from exponential to long-stationary phases, we plotted the total frequency of all PTMs at each of these time points. For this, we simply calculated the percentage of the total number of modified peptide spectral matches (PSMs) at each time point. We used 1 standard error to plot the variation within 3 biological replicates.
 
-Figure~\ref{fig:ModifiedPTM} shows the total percent of the peptide-spectral matches on the y-axis and the time from OD600 plot on the x-axis. It is clear that the amount of spectra that is modified stays approx. at 30\% during all the phases of the growth. This itself is an interesting result and is in agreement with some of the previous studies \textbf{\emph{(Cite papers which show the same numbers)}}. However these previous studies looked at a "snapshot" of the proteome, instead of looking at different phases during the growth. We then looked at the coverage of the proteome at these time points. The number of proteins identified at each of these 9 time points are 2227, 2246
-,2278, 2251, 2306, 2342, 2298, 2234 and 2193 respectively. (Cite some studies, for example Soufi et al and other papers they cited?)
+Figure~\ref{fig:ModifiedPTM} shows the total percent of the peptide-spectral matches on the y-axis and the time from OD600 plot on the x-axis. It is clear that the amount of spectra that is modified stays approx. at 30\% during all the phases of the growth. Most of the previous studies on identifying multiple tandem PTMs looked at a "snapshot" of the proteome, instead of looking at different phases during the growth. We then looked at the coverage of the proteome at these time points. The number of proteins identified at each of these 9 time points are 2227, 2246
+,2278, 2251, 2306, 2342, 2298, 2234 and 2193 respectively. We considered all the peptide spectral matches i.e., one-hit wonders too. Later, when we use the data to identify the protein targets for different PTMs, we included a strict criteria of including proteins that have at least 2 peptide hits.
+%(Cite some studies, for example Soufi et al and other papers they cited?)
 %However note that a modification could be a mutation or a post-translational modification.
 
 \subsection{Mapping mass-shifts to post-translational modifications}
@@ -118,20 +119,20 @@ Three N-terminal N-alpha acetyltransferases (NATs) are known to regulate NtAc in
 
 NtAc has a variety of functions in eukaryotic cells, including regulating protein stability, ER trafficking, protein complex formation, and membrane attachment \cite{Starheimetal2012}, but there is no evidence for a similar role in prokaryotic cells. Nt acetylation of E. coli 30S ribosomal subunits S5 and S18 is thought to affect 30S ribosomal assembly by governing direct contacts with the rRNA \cite{ClatterbuckSoperetal2013}, but no function for prokaryotic Nt acetylation outside of the ribosome has been proposed. Our observation of widespread NtAc in E. coli proteins suggests that this PTM is broadly important for protein homeostasis, but further work will be necessary to determine its effects on target proteins and the mechanisms of its regulation. 
  
-Acetylation in \emph{E. coli} has been studied well in the past \cite{Charbautetal2002} \cite{Gordiyenkoetal2008}. Acetylation occurs in 2 forms i.e., N-{alpha} acetylation and N-{sigma} acetylation. It is known that acetylation occurs co-translationally on n-term (N-{alpha}) and is not reversible, while post-translationally it occurs as a reversible modification, mostly on lysine  (cite this paper and few others too) \emph{The diversity of lysine-acetylated proteins in Escherichia coli.}. In the current work, we focus on n-terminal acetylation. It has been known that almost 2/3rds of the proteins are substrates for n-terminal methionine excision. Following this methionine excision, n-terminal processing, especially n-terminal acetylation \cite{Driessenetal1985} has been shown in the past to be one of the most frequently occuring PTMs. Previous data suggests that this modification is more frequent in eukaryotes than bacteria. However our results indicate that there are quite a few n-term protein acetylations identified. We summarize our results below. 
+Acetylation in \emph{E. coli} has been studied well in the past \cite{Charbautetal2002} \cite{Gordiyenkoetal2008}. Acetylation occurs in 2 forms i.e., N-{alpha} acetylation and N-{sigma} acetylation. It is known that acetylation occurs co-translationally on n-term (N-{alpha}) and is not reversible, while post-translationally it occurs as a reversible modification, mostly on lysine \cite{Yuetal2008}. In the current work, we focus on n-terminal acetylation. It has been known that almost 2/3rds of the proteins are substrates for n-terminal methionine excision. Following this methionine excision, n-terminal processing, especially n-terminal acetylation \cite{Driessenetal1985} has been shown in the past to be one of the most frequently occuring PTMs. Previous data suggests that this modification is more frequent in eukaryotes than bacteria. However our results indicate that there are quite a few n-term protein acetylations identified. We summarize our results below. 
 
 N-terminal acetyltransferases are responsible for the n-terminal acetylation \cite{Starheimetal2012}.  Irrespective of the type of acetylation, since MODa allowed us to look at the global acetylation level i.e., all possible shifts of 42Da, we plotted the acetylation frequencies at different time points as a function of time (see Figure~\ref{fig:Acet}). The total number of acetylations seem to go up from exponential to stationary phases. In our analysis, most of the acetylations seem to be protein n-term acetylations. Either this acetylation occurs on the 1st methionine amino acid or it happens on the 2nd amino acid after the excision of the 1st methionine. Figure~\ref{fig:Acet} also shows the total n-term acetylations and the total serine acetylations. Later, we show that the serine acetylations seem to happen >99\% of the times at n-term.
 
-E. coli grown on glucose have shown to accumulate acetate (Cite proper references Alan wolfe acetate switch review). Our results might suggest the same given the increase in the number of acetylated proteins from exponential to stationary phases. Table 1 (not seen, add this and other tables that show the ranked list of frequently occuring 10 PTMs at each of 9 or few time points) shows the acetylated proteins found under these 2 different phases under E. coli growth under glucose limiting conditions.
+E. coli grown on glucose have shown to accumulate acetate \cite{Kuhnetal2014}. Our results might suggest the same given the increase in the number of acetylated proteins from exponential to stationary phases. Table 1 (not seen, add this and other tables that show the ranked list of frequently occuring 10 PTMs at each of 9 or few time points) shows the acetylated proteins found under these 2 different phases under E. coli growth under glucose limiting conditions.
 
 %(May be add a figure on n-terminal processing percentage of acetylation either in supplementary or in main paper?) Also add a table that has a list of acetylated proteins.
 
 %Out of 3919 total acetylations at all 9 time points combined, 3373 (86\%) of them seem to occur at n-term of the protein. A look-up of the amino acid position for n-term acetylations on ID'ed peptides showed that these were the 2nd amino acid in most (quote?) of the cases. {May be add about the signal peptides here}. \textbf{Might be good to make a sequence logo to show this }Also, most of the acetylations seem to occur on serine (2358 out of 3919). Among n-term protein acetylations, 2350 (70\%) happened on serine, 483 (14.3\%) happened on alanine and 260 (7.7\%) were on threonine. These were the top 3 frequent n-term acetylations. A literature search also showed us the same frequently occuring n-term acetylated amino acids in E. coli \textbf{\emph{cite the paper where this distribution is seen in E. coli}}.
 
 
-\subsection{\emph{E. coli} Phosphorylations, carboxylations, and nitrosylations}
+\subsection{\emph{E. coli} Phosphorylation}
 
-Even though some of the mass-shifts (+80Da (phosphorylation), +XXDa (carboxylation), +YYDa (nitrosylation)) were less abundant, we did a brief survey on these as these have been shown to be key in previous studies (Cite those studies). Most of the studies that looked at phosphoproteome involved enriching the sample for this PTM using techniques such as IMAC, TiO2 and then running mass-spectrometry on the sample. Figure~\ref{fig:Phos} shows the phosphorylations at different points of the growth curve. We considered only the phosphorylations on serine, threonine and tyrosine, as these are well known amino acids that get phosphorylated in most species including \emph{E. coli} \cite{Maceketal2008}. The number of phosphorylations we identified during the time course seem to be small. This is expected, as the sample is not enriched for phosphorylations. However, we observed that the phosphorylations increase from exponential to stationary phases. Such pattern is also previously shown in phosphoproteomic studies \cite{Soaresetal2013} probably pointing to a role of phosphorylation in later stages of the growth cycle.
+Even though some of the mass-shifts that map to phosphorylation (+80Da), carboxylation (+44Da), nitrosylation (+29Da) were less abundant, we did a brief survey on these are some PTMs that were shown to be part of bacterial proteins. Most of the studies that looked at phosphoproteome involved enriching the sample for this PTM using techniques such as IMAC, TiO2 and then running mass-spectrometry on the sample. Figure~\ref{fig:Phos} shows the phosphorylations at different points of the growth curve. We considered only the phosphorylations on serine, threonine and tyrosine, as these are well known amino acids that get phosphorylated in most species including \emph{E. coli} \cite{Maceketal2008}. The number of phosphorylations we identified during the time course seem to be small. This is expected, as the sample is not enriched for phosphorylations. However, we observed that the phosphorylations increase from exponential to stationary phases. Such pattern is also previously shown in phosphoproteomic studies \cite{Soaresetal2013} probably pointing to a role of phosphorylation in later stages of the growth cycle.
 
 We then looked at carboxylations (See Suppl Figure S3)and nitrosylations (See Suppl Figure S4). Like, phosphorylations, carboxylations seem to increase during the later stages of the growth indicating a likely role of this PTM in late stationary phase. 
 %\textbf{\emph{(There are studies linking cellular growth rate to carboxylases, may be related to what is shown here?)}} \textbf{\emph{A previous study in S-nitrosylation in E.coli \cite{Sethetal2012}}} \textbf{\emph{(read this to see if the pattern or the results hold).}} 
@@ -166,7 +167,7 @@ Oxidation frequently occurs on cysteine and methionine and also has been shown t
 %\textbf{MAY CONSIDER REMOVING ABOUT SUCCINYLATION IF IT DOES NOT MAKE SENSE AND TALK NEATLY ABOUT PYROGLUTAMATE FORMATION OR MAY TALK JUST A LINE ABOUT SUCCINYLAITON ETC}
 %We then investigated few frequently occuring modifications on a particular site in 1 or few proteins. Our analysis revealed 2 such modifications in succinylation and pyroglutamate formation. Succinylation modification seem to frequently occur at different phases of \emph{E. coli} growth, interestingly all on the succinyl-transferase. However, we were not able to find any substrates for this transferase. This was also previously identified in another study, however in that study the authors enriched the sample for this PTM. Here we would like to point out that this large-scale study to analyze different PTMs without any enrichment was able to identify and characterize not only widely occuring PTMs, but other low-abundant PTMs, such as succinylation.  
 
-Some of the frequently occuring mass-shifts (add 22 Da and 38 Da from Table X) were annotated as artifacts in UNIMOD database. These were annotated as Na and K adduct formation that were also shown previously (cite proper references). Still, most of the searches performed in the literature ignore these modifications. The frequency of these mass-shift seems to be 3-4\%, combined. To validate if these are really Na and K adducts, or if it is the PTM on any particular amino acid, we plotted the profiles of Na and K adducts (see Suppl Figure S5). This mass-shift seems not to occur on H, K and R but seemed to occur randomly on all the other amino aicds. Histidine, lysine and arginine are amino acids that have side chains that are basic and carry a small positive charge at physiological pH. This explains that this mass-shift is indeed adducts from Na and K, as these adducts don't form on basic amino acids at physiological pH. Since including these Na and K adducts seem to increase the sensitivity of the search, we give a general recommendation to include these adducts as variable modifications in search algorithms that limit the number of PTMs as variable modifications. 
+Some of the frequently occuring mass-shifts (add 22 Da and 38 Da from Table X) were annotated as artifacts in UNIMOD database. These were annotated as Na and K adduct formation that were also shown previously \cite{SchugMcNair2003}. Still, most of the searches performed in the literature ignore these modifications. The frequency of these mass-shift seems to be 3-4\%, combined. To validate if these are really Na and K adducts, or if it is the PTM on any particular amino acid, we plotted the profiles of Na and K adducts (see Suppl Figure S5). This mass-shift seems not to occur on H, K and R but seemed to occur randomly on all the other amino aicds. Histidine, lysine and arginine are amino acids that have side chains that are basic and carry a small positive charge at physiological pH. This explains that this mass-shift is indeed adducts from Na and K, as these adducts don't form on basic amino acids at physiological pH. Since including these Na and K adducts seem to increase the sensitivity of the search, we give a general recommendation to include these adducts as variable modifications in search algorithms that limit the number of PTMs as variable modifications. 
 
 Most of the PTMs seem to occur less frequently, but sometimes seen on the same peptide or the protein. So, we calculated the peptide-spectrum level information to identify these low-abundant modifications. One of the mass-shifts (+ZZZDa) seem to occur on n-terminal glutamine of the protein. This represents pyroglutamate formation. This is a well known PTM that stabilizes the protein to avoid any further n-terminal processing. This PTM seemed to be constant during the entire time course (see Suppl Figure 8). We provided the list of all the modifications that occur on the same position of the peptide as supplementary information (See Suppl Table X).
 
@@ -202,7 +203,7 @@ Most of the peptide identification search algorithms require a list of PTMs to s
 
 N-terminal processing of proteins is a well-known PTM in diverse kinds of species ranging from eukaryotes to bacteria \cite{Kimuraetal2003}. N-terminal acetylation has been shown in the past to provide insights into the nature of the n-terminal of the proteome \cite{Helbigetal2010}. In eukaryotes, n-terminal acetyltransferases are well characterized and studied, for example, as shown in these studies \cite{PolevodaSherman2003}, \cite{PolevodaSherman2003b}. In \emph{E. coli}, NATs are primarily characterized into mainly rim types \cite{Tanakaetal1989}, \cite{Yoshikawaetal1987}. There is lot of work done on lysine acetylation in \emph{E. coli}, however there are not many n-terminal acetylation sites identified or investigated in detail in the past. Lysine acetylation E. coli, acetylation in exponential and stationary phases \textbf{\emph{Colin's discussion}}. 
 
-Protein oxidation by reactive oxygen species (ROS) is important and linked to various diseases including aging \cite{Stadtman1992}. ROS generally seem to accumulate at later stages of growth, because of possible accumulation of toxic substances, nutrient limiting conditions, changes in pH etc. \emph{E. coli's} internal machinery to tackle this oxidative stress comes in many forms at different levels and in this analysis, we were interested at the protein level. \emph{E. coli} has a class of sulfoxide reductases \cite{Brotetal1981} \cite{ZhangWeissbach2008} that fix methionine sulfoxide back to methionine. MsrA and yeaA are the proteins found in this reductase class of enzymes. These reductases has been shown to protect \emph{E. coli} from oxidative damage\cite{Ezratyetal2004}. Here, we looked at the abundances of these proteins during these late stationary phases, where oxidative stress seems to be more. Our earlier work has already shown the induction of these stress proteins at stationary phases using the same mass-spec data set \textbf{\emph{(CiteRef John's paper).}} Even though it is common for the oxidation to happen during sample preparation, we expect this oxidation level to be random and more or less constant at different time points of the growth curve. However, in our current data set, we clearly see that the levels of oxidation go down from exponential to stationary phase, possibly correlating with the oxidation not caused by sample preparation.
+Protein oxidation by reactive oxygen species (ROS) is important and linked to various diseases including aging \cite{Stadtman1992}. ROS generally seem to accumulate at later stages of growth, because of possible accumulation of toxic substances, nutrient limiting conditions, changes in pH etc. \emph{E. coli's} internal machinery to tackle this oxidative stress comes in many forms at different levels and in this analysis, we were interested at the protein level. \emph{E. coli} has a class of sulfoxide reductases \cite{Brotetal1981} \cite{ZhangWeissbach2008} that fix methionine sulfoxide back to methionine. MsrA and yeaA are the proteins found in this reductase class of enzymes. These reductases has been shown to protect \emph{E. coli} from oxidative damage\cite{Ezratyetal2004}. Here, we looked at the abundances of these proteins during these late stationary phases, where oxidative stress seems to be more. Our earlier work has already shown the induction of these stress proteins at stationary phases using the same mass-spec data set \cite{Houseretal2015}. Even though it is common for the oxidation to happen during sample preparation, we expect this oxidation level to be random and more or less constant at different time points of the growth curve. However, in our current data set, we clearly see that the levels of oxidation go down from exponential to stationary phase, possibly correlating with the oxidation not caused by sample preparation.
 
 One of the PTM networks that is well studied in the past is the phosphorylation signaling cascade\cite{Olsenetal2006} (also look for phosphorylation papers that you used in the past at NCBI). These are well known signalling mechansims and have been shown to respond quickly to stress during the late-stationary phases \cite{Soaresetal2013}. Our analysis also supports this behavior and would like to emphasize that while the previous paper investigated only 1 PTM, our analysis investigated most of the PTMs in tandem. 
 
