--- a/Manuscript/PTMsMODaBibliography.bib
+++ b/Manuscript/PTMsMODaBibliography.bib
@@ -572,5 +572,57 @@ Christopher, J. Marx and M. Stephen Trent and Jeffrey E. Barrick and Edward M. M
    pages = {0-0},
    year = {2015} }
 
+@article{Ferminetal2015,
+   author = {Fermin, D. and Avtonomov, D. and Choi, H. and Nesvizhskii, A. I.},
+   title = {LuciPHOr2: site localization of generic post-translational modifications from tandem mass spectrometry data},
+   journal = {Bioinformatics},
+   volume = {31},
+   number = {7},
+   pages = {1141-3},
+   year = {2015} }
+
+@article{Tripodietal2015,
+   author = {Tripodi, F. and Nicastro, R. and Reghellin, V. and Coccetti, P.},
+   title = {Post-translational modifications on yeast carbon metabolism: Regulatory mechanisms beyond transcriptional control},
+   journal = {Biochim Biophys Acta},
+   volume = {1850},
+   number = {4},
+   pages = {620-627},
+   year = {2015} }
+
+@article{Weinertetal2014,
+   author = {Weinert, B. T. and Iesmantavicius, V. and Moustafa, T. and Scholz, C. and Wagner, S. A. and Magnes, C. and Zechner, R. and Choudhary, C.},
+   title = {Acetylation dynamics and stoichiometry in Saccharomyces cerevisiae},
+   journal = {Mol Syst Biol},
+   volume = {10},
+   pages = {716},
+   year = {2014} }
+
+@article{Yangetal2014,
+   author = {Yang, M. K. and Yang, Y. H. and Chen, Z. and Zhang, J. and Lin, Y. and Wang, Y. and Xiong, Q. and Li, T. and Ge, F. and Bryant, D. A. and Zhao, J. D.},
+   title = {Proteogenomic analysis and global discovery of posttranslational modifications in prokaryotes},
+   journal = {Proc Natl Acad Sci U S A},
+   volume = {111},
+   number = {52},
+   pages = {E5633-42},
+   year = {2014} }
+   
+@article{Yuetal2008,
+   author = {Yu, B. J. and Kim, J. A. and Moon, J. H. and Ryu, S. E. and Pan, J. G.},
+   title = {The diversity of lysine-acetylated proteins in Escherichia coli},
+   journal = {J Microbiol Biotechnol},
+   volume = {18},
+   number = {9},
+   pages = {1529-36},
+   year = {2008} }
+   
+   @article{SchugMcNair2003,
+   author = {Schug, K. and McNair, H. M.},
+   title = {Adduct formation in electrospray ionization mass spectrometry II. Benzoic acid derivatives},
+   journal = {J Chromatogr A},
+   volume = {985},
+   number = {1-2},
+   pages = {531-9},
+   year = {2003} }
 
 
